name:                fork-map
version:             0.1.0.0
synopsis:            Convenient and efficient concurrent mapping
-- description:         
homepage:            http://github.com/bgamari/fork-map
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2017 Ben Gamari
category:            Concurrency
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Control.Concurrent.ForkMap
  if !os(windows)
    exposed-modules:   Control.Concurrent.ForkMap.FifoChannel
                       Control.Concurrent.ForkMap.ForkPipe
    build-depends:     unix >=2.7 && <2.8
  else
    cpp-options:       -DWINDOWS

  other-extensions:    ScopedTypeVariables,
                       RankNTypes,
                       ConstraintKinds,
                       FlexibleContexts,
                       DeriveGeneric,
                       KindSignatures
  build-depends:       base >=4.9 && <4.15,
                       async >=2.1 && <2.3,
                       stm >=2.4 && <2.6,
                       binary >=0.8 && <0.11,
                       pipes-safe >=2.2 && <2.4,
                       pipes-concurrency >=2.0 && <2.1,
                       pipes >=4.1 && <4.5,
                       bytestring >=0.10 && <0.11
  hs-source-dirs:      src
  default-language:    Haskell2010

executable fork-map-test
  main-is:             Test.hs
  ghc-options:         -threaded -rtsopts
  build-depends:       base,
                       pipes,
                       fork-map
  default-language:    Haskell2010
